# LearnJni

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lijian/learnjni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-c-lib.c  native-java-callback.c  native-lib.cpp
app/src/main/java/com/lijian/learnjni/: JavaForNative.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lijian/learnjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
